Spacing, colour, and border radius fixes for inside-hero for single provider page template

--- a/web/app/themes/estyn/resources/styles/app.scss
+++ b/web/app/themes/estyn/resources/styles/app.scss
@@ -968,7 +968,7 @@ header {
 .sp-icon-cont {
     width: 72px;
     height: 72px;
-    border-radius: $border-radius-sm;
+    border-radius: $border-radius-lg;
     background-color: $estyn-blue;
 
     i {
